crates/python_parser/tests/snapshots/invalid_syntax@assert_empty_test.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/inline/err/assert_empty_test.py
---
## AST

```
Module(
    ModModule {
        range: 0..7,
        body: [
            Assert(
                AssertStmt {
                    range: 0..6,
                    test: Name(
                        NameExpr {
                            range: 6..6,
                            id: Name(""),
                            ctx: Invalid,
                        },
                    ),
                    msg: None,
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | assert
  |       ^ Syntax Error: Expected an expression
  |
